@@ -44,6 +44,8 @@
 
 #define STR_CONTAINS_MACROS(str)	(NULL != strchr(str, '{'))
 
+void	get_functionids(zbx_vector_uint64_t *functionids, const char *expression);
+
 int	evaluate_function(char *value, DC_ITEM *item, const char *function, const char *parameters, time_t now,
 		char **error);
 
