@@ -696,7 +696,7 @@ static void	add_message_alert(DB_ESCALATION *escalation, DB_EVENT *event, DB_EVE
  *                                                                            *
  * Purpose:                                                                   *
  *                                                                            *
- * Parameters: event - event to check                                         *
+ * Parameters: event    - event to check                                      *
  *             actionid - action ID for matching                              *
  *                                                                            *
  * Return value: SUCCEED - matches, FAIL - otherwise                          *
@@ -898,7 +898,8 @@ static void	execute_operations(DB_ESCALATION *escalation, DB_EVENT *event, DB_AC
 
 	if (0 == action->esc_period)
 	{
-		escalation->status = (action->recovery_msg == 1) ? ESCALATION_STATUS_SLEEP : ESCALATION_STATUS_COMPLETED;
+		escalation->status = (1 == action->recovery_msg) ? ESCALATION_STATUS_SLEEP :
+				ESCALATION_STATUS_COMPLETED;
 	}
 	else
 	{
@@ -922,7 +923,10 @@ static void	execute_operations(DB_ESCALATION *escalation, DB_EVENT *event, DB_AC
 			escalation->nextcheck = time(NULL) + next_esc_period;
 		}
 		else
-			escalation->status = (action->recovery_msg == 1) ? ESCALATION_STATUS_SLEEP : ESCALATION_STATUS_COMPLETED;
+		{
+			escalation->status = (1 == action->recovery_msg) ? ESCALATION_STATUS_SLEEP :
+					ESCALATION_STATUS_COMPLETED;
+		}
 	}
 
 	/* schedule nextcheck for sleeping escalations */
@@ -1106,6 +1110,98 @@ static void	free_event_info(DB_EVENT *event)
 
 /******************************************************************************
  *                                                                            *
+ * Function: check_escalation_trigger                                         *
+ *                                                                            *
+ * Purpose: check whether the escalation trigger and related items, hosts are *
+ *          not deleted or disabled.                                          *
+ *                                                                            *
+ * Parameters: triggerid - [IN] the id of trigger to check                    *
+ *             source    - [IN] the esclation event source                    *
+ *             error     - [OUT] message in case escalation is cancelled      *
+ *                                                                            *
+ ******************************************************************************/
+static void	check_escalation_trigger(zbx_uint64_t triggerid, unsigned char source, char **error)
+{
+	DC_TRIGGER		trigger;
+	int			i, errcode, *errcodes = NULL;
+	zbx_vector_uint64_t	functionids, itemids;
+	DC_ITEM			*items = NULL;
+	DC_FUNCTION		*functions = NULL;
+
+	/* trigger disabled or deleted? */
+	DCconfig_get_triggers_by_triggerids(&trigger, &triggerid, &errcode, 1);
+
+	if (SUCCEED != errcode)
+	{
+		*error = zbx_dsprintf(*error, "trigger id:" ZBX_FS_UI64 " deleted.", triggerid);
+		goto out;
+	}
+	else if (TRIGGER_STATUS_DISABLED == trigger.status)
+	{
+		*error = zbx_dsprintf(*error, "trigger \"%s\" disabled.", trigger.description);
+		goto out;
+	}
+
+	if (EVENT_SOURCE_TRIGGERS != source)
+		goto out;
+
+	/* check items and hosts referenced by trigger expression */
+	zbx_vector_uint64_create(&functionids);
+	zbx_vector_uint64_create(&itemids);
+
+	get_functionids(&functionids, trigger.expression_orig);
+
+	functions = zbx_malloc(functions, sizeof(DC_FUNCTION) * functionids.values_num);
+	errcodes = zbx_malloc(errcodes, sizeof(int) * functionids.values_num);
+
+	DCconfig_get_functions_by_functionids(functions, functionids.values, errcodes, functionids.values_num);
+
+	for (i = 0; i < functionids.values_num; i++)
+	{
+		if (SUCCEED == errcodes[i])
+			zbx_vector_uint64_append(&itemids, functions[i].itemid);
+	}
+
+	DCconfig_clean_functions(functions, errcodes, functionids.values_num);
+	zbx_free(functions);
+
+	zbx_vector_uint64_sort(&itemids, ZBX_DEFAULT_UINT64_COMPARE_FUNC);
+	zbx_vector_uint64_uniq(&itemids, ZBX_DEFAULT_UINT64_COMPARE_FUNC);
+
+	items = zbx_malloc(items, sizeof(DC_ITEM) * itemids.values_num);
+	errcodes = zbx_realloc(errcodes, sizeof(int) * itemids.values_num);
+
+	DCconfig_get_items_by_itemids(items, itemids.values, errcodes, itemids.values_num);
+
+	for (i = 0; i < itemids.values_num; i++)
+	{
+		if (SUCCEED != errcodes[i])
+			continue;
+
+		if (ITEM_STATUS_DISABLED == items[i].status)
+		{
+			*error = zbx_dsprintf(*error, "item \"%s\" disabled.", items[i].key_orig);
+			break;
+		}
+		if (HOST_STATUS_NOT_MONITORED == items[i].host.status)
+		{
+			*error = zbx_dsprintf(*error, "host \"%s\" disabled.", items[i].host.host);
+			break;
+		}
+	}
+
+	DCconfig_clean_items(items, errcodes, itemids.values_num);
+	zbx_free(items);
+	zbx_free(errcodes);
+
+	zbx_vector_uint64_destroy(&itemids);
+	zbx_vector_uint64_destroy(&functionids);
+out:
+	DCconfig_clean_triggers(&trigger, &errcode, 1);
+}
+
+/******************************************************************************
+ *                                                                            *
  * Function: check_escalation                                                 *
  *                                                                            *
  * Purpose: check whether the escalation is still relevant (items, triggers,  *
@@ -1114,8 +1210,6 @@ static void	free_event_info(DB_EVENT *event)
  * Parameters: escalation - [IN] escalation data                              *
  *             action     - [OUT] action data (optional)                      *
  *             error      - [OUT] message in case escalation is cancelled     *
- *                                                                            *
- * Author: Aleksandrs Saveljevs                                               *
  *                                                                            *
  * Comments: If 'action' is not NULL, it gathers information about it. If     *
  *           information could not be gathered, its 'actionid' is set to 0.   *
@@ -1127,6 +1221,8 @@ static void	check_escalation(const DB_ESCALATION *escalation, DB_ACTION *action,
 	DB_RESULT	result;
 	DB_ROW		row;
 	unsigned char	source = 0xff, object = 0xff;
+	DC_ITEM		item;
+	int		errcode;
 
 	zabbix_log(LOG_LEVEL_DEBUG, "In %s() escalationid:" ZBX_FS_UI64 " status:%s",
 			__function_name, escalation->escalationid, zbx_escalation_status_string(escalation->status));
@@ -1138,101 +1234,36 @@ static void	check_escalation(const DB_ESCALATION *escalation, DB_ACTION *action,
 		object = (unsigned char)atoi(row[1]);
 	}
 	else
-		*error = zbx_dsprintf(*error, "event [" ZBX_FS_UI64 "] deleted.", escalation->eventid);
+	{
+		*error = zbx_dsprintf(*error, "event id:" ZBX_FS_UI64 " deleted.", escalation->eventid);
+	}
+
 	DBfree_result(result);
 
 	if (NULL == *error && EVENT_OBJECT_TRIGGER == object)
+		check_escalation_trigger(escalation->triggerid, source, error);
+
+	if (NULL == *error && EVENT_SOURCE_INTERNAL == source)
 	{
-		/* trigger disabled or deleted? */
-
-		result = DBselect("select description,status from triggers where triggerid=" ZBX_FS_UI64,
-				escalation->triggerid);
-
-		if (NULL == (row = DBfetch(result)))
-		{
-			*error = zbx_dsprintf(*error, "trigger [" ZBX_FS_UI64 "] deleted.", escalation->triggerid);
-		}
-		else if (TRIGGER_STATUS_DISABLED == atoi(row[1]))
-		{
-			*error = zbx_dsprintf(*error, "trigger '%s' disabled.", row[0]);
-		}
-		DBfree_result(result);
-	}
-
-	if (EVENT_SOURCE_TRIGGERS == source)
-	{
-		if (NULL == *error && EVENT_OBJECT_TRIGGER == object)
-		{
-			/* item disabled? */
-
-			result = DBselect(
-					"select i.name"
-					" from items i,functions f,triggers t"
-					" where i.itemid=f.itemid"
-						" and f.triggerid=t.triggerid"
-						" and t.triggerid=" ZBX_FS_UI64
-						" and i.status=%d",
-					escalation->triggerid, ITEM_STATUS_DISABLED);
-
-			if (NULL != (row = DBfetch(result)))
-				*error = zbx_dsprintf(*error, "item '%s' disabled.", row[0]);
-			DBfree_result(result);
-		}
-
-		if (NULL == *error && EVENT_OBJECT_TRIGGER == object)
-		{
-			/* host disabled? */
-
-			result = DBselect(
-					"select h.host"
-					" from hosts h,items i,functions f,triggers t"
-					" where h.hostid=i.hostid"
-						" and i.itemid=f.itemid"
-						" and f.triggerid=t.triggerid"
-						" and t.triggerid=" ZBX_FS_UI64
-						" and h.status=%d",
-					escalation->triggerid, HOST_STATUS_NOT_MONITORED);
-
-			if (NULL != (row = DBfetch(result)))
-				*error = zbx_dsprintf(*error, "host '%s' disabled.", row[0]);
-			DBfree_result(result);
-		}
-	}
-	else if (EVENT_SOURCE_INTERNAL == source)
-	{
-		if (NULL == *error && (EVENT_OBJECT_ITEM == object || EVENT_OBJECT_LLDRULE == object))
+		if (EVENT_OBJECT_ITEM == object || EVENT_OBJECT_LLDRULE == object)
 		{
 			/* item disabled or deleted? */
+			DCconfig_get_items_by_itemids(&item, &escalation->itemid, &errcode, 1);
 
-			result = DBselect("select name,status from items where itemid=" ZBX_FS_UI64,
-					escalation->itemid);
-
-			if (NULL == (row = DBfetch(result)))
+			if (SUCCEED != errcode)
 			{
-				*error = zbx_dsprintf(*error, "item [" ZBX_FS_UI64 "] deleted.", escalation->itemid);
+				*error = zbx_dsprintf(*error, "item id:" ZBX_FS_UI64 " deleted.", escalation->itemid);
 			}
-			else if (ITEM_STATUS_DISABLED == atoi(row[1]))
+			else if (ITEM_STATUS_DISABLED == item.status)
 			{
-				*error = zbx_dsprintf(*error, "item '%s' disabled.", row[0]);
+				*error = zbx_dsprintf(*error, "item \"%s\" disabled.", item.key_orig);
 			}
-			DBfree_result(result);
-		}
+			else if (HOST_STATUS_NOT_MONITORED == item.host.status)
+			{
+				*error = zbx_dsprintf(*error, "host \"%s\" disabled.", item.host.host);
+			}
 
-		if (NULL == *error && (EVENT_OBJECT_ITEM == object || EVENT_OBJECT_LLDRULE == object))
-		{
-			/* host disabled? */
-
-			result = DBselect(
-					"select h.host"
-					" from hosts h,items i"
-					" where h.hostid=i.hostid"
-						" and i.itemid=" ZBX_FS_UI64
-						" and h.status=%d",
-					escalation->itemid, HOST_STATUS_NOT_MONITORED);
-
-			if (NULL != (row = DBfetch(result)))
-				*error = zbx_dsprintf(*error, "host '%s' disabled.", row[0]);
-			DBfree_result(result);
+			DCconfig_clean_items(&item, &errcode, 1);
 		}
 	}
 
@@ -1283,11 +1314,11 @@ static void	check_escalation(const DB_ESCALATION *escalation, DB_ACTION *action,
 		if (NULL != action)
 			action->actionid = 0;
 
-		*error = zbx_dsprintf(*error, "action [" ZBX_FS_UI64 "] deleted", escalation->actionid);
+		*error = zbx_dsprintf(*error, "action id:" ZBX_FS_UI64 " deleted", escalation->actionid);
 	}
 	DBfree_result(result);
 
-	zabbix_log(LOG_LEVEL_DEBUG, "End of %s() error:'%s'", __function_name, ZBX_NULL2STR(*error));
+	zabbix_log(LOG_LEVEL_DEBUG, "End of %s() error: %s", __function_name, ZBX_NULL2STR(*error));
 }
 
 static void	execute_escalation(DB_ESCALATION *escalation)
@@ -1579,8 +1610,9 @@ void	main_escalator_loop(void)
 		{
 			if (0 == sleeptime)
 			{
-				zbx_setproctitle("%s [processed %d escalations in " ZBX_FS_DBL " sec, processing escalations]",
-						get_process_type_string(process_type), escalations_count, total_sec);
+				zbx_setproctitle("%s [processed %d escalations in " ZBX_FS_DBL
+						" sec, processing escalations]", get_process_type_string(process_type),
+						escalations_count, total_sec);
 			}
 			else
 			{
