@@ -7,6 +7,7 @@ A.F....... [ZBX-1357] updated Brazilian Portuguese, Japanese, Italian, Polish an
 A.F.I..PS. [ZBX-7720] increased size of "Host name", "Visible host name" and "Proxy name" fields to 128 characters (Sasha)
 
 Bug fixes:
+........S. [ZBX-8444] database queries for enabled items, triggers and hosts replaced with queries from configuration cache to improve performance for processing sleeping escalations (igors)
 ..F....PS. [ZBX-8608] added support of IP masks for action conditions (Sasha)
 ........S. [ZBX-8608] fixed clearing of discovered services with using CIDR notation in ip lists (Sasha)
 ........S. [ZBX-8415] fixed possible server crash on LLD host or host group update (dimir, Sasha)
@@ -307,6 +308,7 @@ A.......S. [ZBX-8473] improved performance of deleting triggers by API and serve
 A.F....... [ZBX-1357] updated Japanese, Polish and Spanish translations; thanks to Zabbix translators (Richlv)
 
 Bug fixes:
+........S. [ZBX-8444] increased the interval for checking sleeping escalations to improve performance (igors)
 ..F....PS. [ZBX-8608] added support of IP masks for action conditions (Sasha)
 A......... [ZBX-8603] fixed web scenario fields "http_proxy" and "retries" not updating properly when linking template to host (Ivo)
 ........S. [ZBX-8415] fixed possible server crash on lld hosts or host groups update (dimir,Sasha)
